# Todo-list

./: .gitignore  README.md  package-lock.json  package.json
Fullstack-Todo-List-GraphQL/api/: index.js  package-lock.json  package.json
Fullstack-Todo-List-GraphQL/client/: index.html  package-lock.json  package.json
Rust_Todo_List/rust_backend/: Cargo.toml
Rust_Todo_List/todos_backend/: Cargo.toml
Rust_Todo_List/todos_backend/src/: error.rs  main.rs  model.rs
Rust_Todo_List/vanilla_frontend/: index.html  script.js  style.css
Tailwind-TodoList/: tailwind.config.js
Tailwind-TodoList/code/: index.html  script.js
Todo-List-GraphQL/api/: index.js  package-lock.json  package.json
Todo-List-GraphQL/client/: package-lock.json  package.json
Todo-List-Postgres/api/: db.js  index.js  package-lock.json  package.json  todos.sql
Todo-List-Postgres/api_prisma/: index.ts  package-lock.json  package.json
Todo-List-Postgres/client/: index.html  package-lock.json  package.json
Todo-List-Prisma/api/: package-lock.json  package.json
Todo-List-Prisma/client/: index.html  package-lock.json  package.json
Todo-List-trpc/api/: package-lock.json  package.json
Todo-List-trpc/client/: index.html  (+2 more)
api/: index.js  package-lock.json  package.json
client/: package-lock.json
mongodb-todolist/: index.js  package-lock.json  package.json
mysql-todolist/: index.js  package-lock.json  package.json
react/: package-lock.json
simple-backend/: index.js  package-lock.json  package.json
todo-list-next/: package-lock.json  package.json
vanilla/: index.html  script.js
(+59 files in other folders)
