[package]
name = "todos_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["fs", "cors"] }

[dev-dependencies]
anyhow = "1.0.79"
httpc-test = "0.1.8"
